--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main-content" id="first">
         <div class="about-me">
             <h3>:about me</h3>
-            Hello there! Welcome to my webpage, my name is Wiktor and I am programming beginner. I have some experience in: <a>Python</a>, <a>C++</a>, <a>HTML</a>, <a>CSS</a>. Now studying IT specialist title at one of the best high school in Poland. I started programming at 2017. Don't have so much time because of the polish education system. Math enjoyer. Chess player (elo ~1200). Still don't know what to do in the future. We'll see...
+            Hello there! Welcome to my webpage, my name is Wiktor and I am programming beginner. I am learning: <a>Python</a>, <a>C++</a>, <a>HTML</a>, <a>CSS</a> and <a>Swift</a>. Now studying IT specialist title at one of the best high school in Poland. I started programming at 2017. Don't have so much time because of the polish education system. Math enjoyer. Chess player (elo ~1200). Still don't know what to do in the future. We'll see...
         </div>
         <div class="other">
             <h3>:other</h3>
